Add video echo: browser → Swing display + re-encode → browser remoteVideo
Key implementation details:
- Pre-request webrtcbin sink_%u pad BEFORE set-remote-description so webrtcbin
  creates a SENDRECV transceiver and the answer naturally contains a=sendrecv
- Link full encode chain (AppSrc→videorate→capsfilter→vp8enc→rtpvp8pay→sink_0)
  BEFORE pipeline.setState(PLAYING) so webrtcbin configures its DTLS-SRTP send
  context on the PAUSED→PLAYING transition
- Break the GStreamer loop (webrtcbin.src→decode→encode→webrtcbin.sink) using an
  AppSink/AppSrc Java bridge: captureAppSink is a graph leaf, encoderSrc is a
  graph root — GStreamer sees no cycle
- Set AppSrc caps dynamically from the first captured sample (sample.getCaps())
  so vp8enc gets the actual width/height; without this it emits Internal data
  stream error
- videorate normalises variable decoder framerate to 30 fps for vp8enc
- tee after decode chain splits to display branch (BGRx→Swing) and capture
  branch (I420→AppSink→Java bridge)

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>